Design for upload

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,11 +1,36 @@
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    color: #888;
-    line-height: 30px;
-    text-align: center;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 300;
+	color: #888;
+	line-height: 30px;
+}
+.centered{
+	text-align: center;
+}
+.preview{
+	height:100px;
+	width:100px;
+	border:1px solid gray;
+}
+.preview img{
+	width:100px;
+	height:100px;
+}
+.minutes, .seconds{
+	width:60px;
+	height: 30px;
+	margin-bottom: 5px;
+}
+.vertical_offset10{
+	margin-top:10px;
+}
+.vertical_offset20{
+	margin-top:20px;
+}
+.semi-transparent{
+	opacity: 0.9;
 }
 
 strong { font-weight: 500; }
@@ -13,22 +38,22 @@ strong { font-weight: 500; }
 a, a:hover, a:focus {
 	color: #4aaf51;
 	text-decoration: none;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+	-o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
 h1, h2 {
 	margin-top: 10px;
 	font-size: 38px;
-    font-weight: 100;
-    color: #555;
-    line-height: 50px;
+	font-weight: 100;
+	color: #555;
+	line-height: 50px;
 }
 
 h3 {
 	font-size: 22px;
-    font-weight: 300;
-    color: #555;
-    line-height: 30px;
+	font-weight: 300;
+	color: #555;
+	line-height: 30px;
 }
 
 img { max-width: 100%; }
@@ -44,10 +69,10 @@ img { max-width: 100%; }
 	padding: 16px 20px 0 20px;
 	background: #4aaf51;
 	font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	font-weight: 300;
+	line-height: 16px;
+	color: #fff;
+	-moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
 }
 .btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
 
@@ -70,19 +95,18 @@ img { max-width: 100%; }
 	background: rgba(0, 0, 0, 0.3);
 	border: 1px solid #fff;
 	font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	font-weight: 300;
+	line-height: 16px;
+	color: #fff;
+	-moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
 }
-.btn-link-2:hover, .btn-link-2:focus, 
+.btn-link-2:hover, .btn-link-2:focus,
 .btn-link-2:active, .btn-link-2:active:focus { outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); color: #fff; }
 
 
 /***** Top content *****/
 
 .inner-bg {
-    padding: 100px 0 170px 0;
 }
 
 .top-content .text {
@@ -100,7 +124,7 @@ img { max-width: 100%; }
 .top-content .description a {
 	color: #fff;
 }
-.top-content .description a:hover, 
+.top-content .description a:hover,
 .top-content .description a:focus { border-bottom: 1px dotted #fff; }
 
 .form-box {
@@ -109,7 +133,7 @@ img { max-width: 100%; }
 
 .form-top {
 	overflow: hidden;
-	padding: 0 25px 15px 25px;
+	padding: 0 25px 0 25px;
 	background: #fff;
 	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
 	text-align: left;
@@ -121,7 +145,7 @@ img { max-width: 100%; }
 	padding-top: 25px;
 }
 
-.form-top-left h3 { margin-top: 0; }
+.form-top-left h3 { margin-top: 0; margin-bottom: 0;}
 
 .form-top-right {
 	float: left;
@@ -172,14 +196,74 @@ img { max-width: 100%; }
 @media (min-width: 768px) and (max-width: 991px) {}
 
 @media (max-width: 767px) {
-	
+
 	.inner-bg { padding: 60px 0 110px 0; }
 
 }
 
 @media (max-width: 415px) {
-	
+
 	h1, h2 { font-size: 32px; }
 
 }
+
+
+label.btn span {
+	font-size: 1.5em ;
+}
+
+label input[type="radio"] ~ i.fa.fa-circle-o{
+	color: #b3b3b3;    display: inline;
+}
+label input[type="radio"] ~ i.fa.fa-check-circle-o{
+	display: none;
+}
+label input[type="radio"]:checked ~ i.fa.fa-circle-o{
+	display: none;
+}
+label input[type="radio"] {
+	display: none;
+}
+
+label input[type="radio"]:checked ~ i.fa.fa-check-circle-o{
+	color: #19b9e7;    display: inline;
+}
+label:hover input[type="radio"] ~ i.fa {
+	color: #19b9e7;
+}
+
+
+div[data-toggle="buttons"] label.active{
+	color: #19b9e7;
+}
+
+label[data-toggle="buttons"]{
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 10px;
+	font-weight: normal;
+	line-height: 1em;
+	text-align: left;
+	white-space: nowrap;
+	vertical-align: top;
+	cursor: pointer;
+	background-color: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
+label[data-toggle="buttons"]:hover {
+	color: #19b9e7;
+}
+
+
+label[data-toggle="buttons"]:active,label[data-toggle="buttons"].active {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 
