--- a/src/main/resources/static/views/uploadSongForm2.html
+++ b/src/main/resources/static/views/uploadSongForm2.html
@@ -12,13 +12,13 @@
 
     <div class="form-bottom">
 
-        <form role="form" action="" method="post" class="login-form">
+        <form role="form" class="login-form" ng-controller="SongUploadController">
 
 
             <div class="row vertical_offset20">
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage1" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile1" name="imageFile1" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -26,14 +26,14 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes1" ng-model="minutes1" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds1" ng-model="seconds1" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage2" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile2" name="imageFile2" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -41,14 +41,14 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes2" ng-model="minutes2" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds2" ng-model="seconds2" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage3" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile3" name="imageFile3" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -56,8 +56,8 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes3" ng-model="minutes3" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds3" ng-model="seconds3" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
             <div class="row vertical_offset20">
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage4" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile4" name="imageFile4" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -74,14 +74,14 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes4" ng-model="minutes4" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds4" ng-model="seconds4" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage5" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile5" name="imageFile5" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -89,14 +89,14 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes5" ng-model="minutes5" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds5" ng-model="seconds5" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="row">
-                        <div class="col-xs-12"> <input type="file" name="testimage6" /></div>
+                        <div class="col-xs-12"> <input type="file" file-model="imageFile6" name="imageFile6" /></div>
                     </div>
                     <div class="row vertical_offset10">
                         <div class="col-xs-12 col-md-6">
@@ -104,8 +104,8 @@
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="row"><div class="col-xs-12">Time:</div></div>
-                            <div class="row"><div class="col-xs-12"><input class="minutes" type="number" placeholder="min"></div></div>
-                            <div class="row"><div class="col-xs-12"><input class="seconds" type="number" placeholder="sec"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="minutes" name="minutes6" ng-model="minutes6" type="number" placeholder="min"></div></div>
+                            <div class="row"><div class="col-xs-12"><input class="seconds" name="seconds6" ng-model="seconds6" type="number" placeholder="sec"></div></div>
                         </div>
                     </div>
                 </div>
@@ -113,10 +113,10 @@
             <div class="row vertical_offset20">
 
                 <div class="col-xs-12 col-md-3 col-md-offset-6">
-                    <button type="submit" class="btn col-xs-12 col-md-6" style="background-color:#b3b3b3; !important;">Cancel</button>
+                    <button type="submit" ui-sref="home" class="btn col-xs-12 col-md-6" style="background-color:#b3b3b3; !important;">Cancel</button>
                 </div>
                 <div class="col-xs-12 col-md-3">
-                    <button type="submit" ui-sref="upload.third" class="btn" style="background-color:#19b9e7 !important;">Next</button>
+                    <button type="submit"  ng-click="submit2()" ui-sref="upload.third" class="btn btn-submit" style="background-color:#19b9e7 !important;">Next</button>
                 </div>
             </div>
 
@@ -129,22 +129,22 @@
 <script type="text/javascript">
     $(function() {
         $('#preview1').imagepreview({
-            input: '[name="testimage1"]', preview: '#preview1'
+            input: '[name="imageFile1"]', preview: '#preview1'
         });
         $('#preview2').imagepreview({
-            input: '[name="testimage2"]', preview: '#preview2',
+            input: '[name="imageFile2"]', preview: '#preview2',
         });
         $('#preview3').imagepreview({
-            input: '[name="testimage3"]', preview: '#preview3'
+            input: '[name="imageFile3"]', preview: '#preview3'
         });
         $('#preview4').imagepreview({
-            input: '[name="testimage4"]', preview: '#preview4',
+            input: '[name="imageFile4"]', preview: '#preview4',
         });
         $('#preview5').imagepreview({
-            input: '[name="testimage5"]', preview: '#preview5'
+            input: '[name="imageFile5"]', preview: '#preview5'
         });
         $('#preview6').imagepreview({
-            input: '[name="testimage6"]', preview: '#preview6',
+            input: '[name="imageFile6"]', preview: '#preview6',
         });
     });
 </script>
