--- a/src/main/resources/static/old/views/LoginView.html
+++ b/src/main/resources/static/old/views/LoginView.html
@@ -1,48 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    .semi-transparent {
+        opacity: 0.9;
+    }
 
-<head>
+    .btn-submit {
+        width: 100%;
+    }
+</style>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Login Form Template</title>
 
-    <style>
-        .semi-transparent {
-            opacity: 0.9;
-        }
-
-        .btn-submit {
-            width: 100%;
-        }
-    </style>
-</head>
-
-<body>
-
-<div ng-controller="LoginController">
-    <!-- Top content -->
-    <div class="top-content centered">
-
-        <div class="inner-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3 form-box semi-transparent">
-                        <div class="form-top">
-                            <div class="form-top-left">
-                                <h3>Login to our site</h3>
-
-                                <p>Enter your email and password to log in:</p>
-                            </div>
-                            <div class="form-top-right">
-                                <i class="fa fa-key"></i>
-                            </div>
+<!-- Top content -->
+<div class="top-content centered">
+    <div class="inner-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 form-box semi-transparent">
+                    <div class="form-top">
+                        <div class="form-top-left">
+                            <h3>Login to our site</h3>
+                            <p>Enter your email and password to log in:</p>
                         </div>
-                        <div class="form-bottom">
+                        <div class="form-top-right">
+                            <i class="fa fa-key"></i>
+                        </div>
+                    </div>
+                    <div class="form-bottom">
+                        <form>
+                            <p ng-show="invalidUsernameOrPassword" class="text-danger">Wrong username or password</p>
                             <div class="form-group">
                                 <label class="sr-only" for="form-username">Email</label>
-                                <input type="text" name="form-username" ng-model="username" placeholder="Email..."
+                                <input type="text" name="form-username" ng-model="email" placeholder="Email..."
                                        class="form-username form-control" id="form-username">
                             </div>
                             <div class="form-group">
@@ -63,32 +50,28 @@
                             <button type="submit" class="btn btn-submit" ng-click="login()"
                                     style="background-color:#19b9e7 !important;">Sign in!
                             </button>
-
-                        </div>
+                        </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3 social-login">
-                        <h3>...or login with:</h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 social-login">
+                    <h3>...or login with:</h3>
 
-                        <div class="social-login-buttons">
-                            <a class="btn btn-link-1 btn-link-1-facebook" href="#">
-                                <i class="fa fa-facebook"></i> Facebook
-                            </a>
-                            <a class="btn btn-link-1 btn-link-1-twitter" href="#">
-                                <i class="fa fa-twitter"></i> Twitter
-                            </a>
-                            <a class="btn btn-link-1 btn-link-1-google-plus" href="#">
-                                <i class="fa fa-google-plus"></i> Google Plus
-                            </a>
-                        </div>
+                    <div class="social-login-buttons">
+                        <a class="btn btn-link-1 btn-link-1-facebook" href="#">
+                            <i class="fa fa-facebook"></i> Facebook
+                        </a>
+                        <a class="btn btn-link-1 btn-link-1-twitter" href="#">
+                            <i class="fa fa-twitter"></i> Twitter
+                        </a>
+                        <a class="btn btn-link-1 btn-link-1-google-plus" href="#">
+                            <i class="fa fa-google-plus"></i> Google Plus
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
-</div>
-</body>
 
-</html>
+</div>
