Images bug fixed Home screen fixed

--- a/src/main/resources/static/old/css/amadeus-style.css
+++ b/src/main/resources/static/old/css/amadeus-style.css
@@ -56,24 +56,19 @@ body {
 }
 
 .song-image {
-    display: none;
+    /*display: none;*/
 }
 
 .song-image:first-child {
-    display: block;
+    /*display: block;*/
+    /*z-index: -1;*/
 }
+
     /* -----------------------------------------Tags----------------------------------- */
 .tag {
     float: left;
     margin-right: 5px;
 }
-
-/* -----------------------------------------Player--------------------------------------- */
-#player {
-    position: fixed;
-    bottom: 0;
-}
-
 /* -------------------------------------Tgs in upload form---------------------------------- */
 .image_picker_image {
     width: 28px !important;
@@ -87,92 +82,117 @@ body {
 .thumbnail p {
     cursor:default;
 }
-/* ----------------------------------------------------- */
+/* -------------------------------------Player---------------------------------- */
+#player {
+    position: fixed;
+    bottom: 0;
+    padding: 5px 10px 5px 10px ;
+    background-color: #000 !important;
+    /*padding-bottom: 15px;*/
+    border-top: 1px solid #cccccc;
+    color: #EEEEEE;
+}
+
+#player p {
+    cursor: default !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+#player-controls, #player-controls i {
+    color: #eeeeee;
+    color: #eeeeee;
+    font-size:large;
+    line-height: 20px;
+}
+#player-timeline input {
+    width: 100%;
+}
+
+/* Hide thumb */
+/* -------------------------------------Range---------------------------------- */
 input[type=range] {
     -webkit-appearance: none;
-    margin: 18px 0;
     width: 100%;
+    margin: 6.25px 0;
 }
 input[type=range]:focus {
     outline: none;
 }
 input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 8.4px;
+    height: 5.5px;
     cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #3071a9;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
+    box-shadow: 1px 1px 1px #a00000, 0px 0px 1px #ba0000;
+    background: #ff0000;
+    border-radius: 1.4px;
+    border: 0px solid #ff0101;
 }
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
+    border: 0.2px solid rgba(0, 0, 0, 0.87);
+    height: 18px;
+    width: 18px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -14px;
+    margin-top: -6.25px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
+    background: #ff1a1a;
 }
 input[type=range]::-moz-range-track {
     width: 100%;
-    height: 8.4px;
+    height: 5.5px;
     cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #3071a9;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
+    box-shadow: 1px 1px 1px #a00000, 0px 0px 1px #ba0000;
+    background: #ff0000;
+    border-radius: 1.4px;
+    border: 0px solid #ff0101;
 }
 input[type=range]::-moz-range-thumb {
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
+    border: 0.2px solid rgba(0, 0, 0, 0.87);
+    height: 18px;
+    width: 18px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
 }
 input[type=range]::-ms-track {
     width: 100%;
-    height: 8.4px;
+    height: 5.5px;
     cursor: pointer;
-    animate: 0.2s;
     background: transparent;
     border-color: transparent;
-    border-width: 16px 0;
     color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-    background: #2a6495;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #e60000;
+    border: 0px solid #ff0101;
+    border-radius: 2.8px;
+    box-shadow: 1px 1px 1px #a00000, 0px 0px 1px #ba0000;
 }
 input[type=range]::-ms-fill-upper {
-    background: #3071a9;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #ff0000;
+    border: 0px solid #ff0101;
+    border-radius: 2.8px;
+    box-shadow: 1px 1px 1px #a00000, 0px 0px 1px #ba0000;
 }
 input[type=range]::-ms-thumb {
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 36px;
-    width: 16px;
+    border: 0.2px solid rgba(0, 0, 0, 0.87);
+    height: 18px;
+    width: 18px;
     border-radius: 3px;
     background: #ffffff;
     cursor: pointer;
+    height: 5.5px;
 }
 input[type=range]:focus::-ms-fill-lower {
-    background: #3071a9;
+    background: #ff0000;
 }
 input[type=range]:focus::-ms-fill-upper {
-    background: #367ebd;
+    background: #ff1a1a;
 }
