--- a/src/main/resources/static/old/css/style.css
+++ b/src/main/resources/static/old/css/style.css
@@ -79,11 +79,11 @@ img {
     text-shadow: none;
 }
 
-::selection {
-    background: #4aaf51;
-    color: #fff;
-    text-shadow: none;
-}
+/*::selection {*/
+    /*background: #4aaf51;*/
+    /*color: #fff;*/
+    /*text-shadow: none;*/
+/*}*/
 
 .btn-link-1 {
     display: inline-block;
