--- a/src/main/resources/static/old/views/registerView.html
+++ b/src/main/resources/static/old/views/registerView.html
@@ -47,7 +47,9 @@
 
 <!-- Top content -->
 <div class="top-content centered">
-
+    <script>
+        $.backstretch("/old/img/background.jpg");
+    </script>
     <div class="inner-bg">
         <div class="container">
             <div class="row">
