SongImage bug fixed Login implemented with cookies

--- a/src/main/resources/static/old/views/uploadSongForm1.html
+++ b/src/main/resources/static/old/views/uploadSongForm1.html
@@ -1,9 +1,11 @@
 <script>
-
     $('label').click(function () {
         $('label input[type="radio"]').parent().find('span').attr('style', 'color:#b3b3b3;');
         $('label input[type="radio"]:checked').parent().find('span').attr('style', 'color:#19b9e7;');
     });
+</script>
+<script>
+    $.backstretch("/old/img/background.jpg");
 </script>
 <div class="form-box semi-transparent">
     <div class="form-top">
