--- a/src/main/resources/static/old/views/uploadSongForm2.html
+++ b/src/main/resources/static/old/views/uploadSongForm2.html
@@ -1,3 +1,6 @@
+<script>
+    $.backstretch("/old/img/background.jpg");
+</script>
 <div class="form-box semi-transparent">
     <div class="form-top">
         <div class="form-top-left">
