--- a/src/main/resources/static/old/views/uploadSongForm3.html
+++ b/src/main/resources/static/old/views/uploadSongForm3.html
@@ -1,3 +1,6 @@
+<script>
+    $.backstretch("/old/img/background.jpg");
+</script>
 <div class="form-box semi-transparent">
     <div class="form-top">
         <div class="form-top-left">
@@ -33,7 +36,7 @@
                     </button>
                 </div>
                 <div class="col-xs-12 col-md-3">
-                    <button type="submit" ui-sref="home" class="btn btn-submit" ng-click="submit3()"
+                    <button type="submit" ui-sref="home-index" class="btn btn-submit" ng-click="submit3()"
                             style="background-color:#19b9e7 !important;">Finish
                     </button>
                 </div>
