--- a/src/main/resources/static/old/views/LoginView.html
+++ b/src/main/resources/static/old/views/LoginView.html
@@ -41,14 +41,13 @@
                                        placeholder="Password..." class="form-password form-control" id="form-password">
                             </div>
 
-                            <div class="form-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" ng-model="rememberMe"> Remember Me
-                                    </label>
-                                </div>
-
-                            </div>
+                            <!--<div class="form-group">-->
+                            <!--<div class="checkbox">-->
+                            <!--<label>-->
+                            <!--<input type="checkbox" ng-model="rememberMe"> Remember Me-->
+                            <!--</label>-->
+                            <!--</div>-->
+                            <!--</div>-->
 
                             <button type="submit" class="btn btn-submit" ng-click="login()"
                                     style="background-color:#19b9e7 !important;">Sign in!
