--- a/src/main/resources/static/old/css/amadeus-style.css
+++ b/src/main/resources/static/old/css/amadeus-style.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------Body--------------------------------------- */
 body {
-    padding-bottom: 200px;
+    padding-bottom: 100px;
 }
 
 .navbar {
@@ -46,7 +46,7 @@ body {
 }
 /* -----------------------------------------Songs--------------------------------------- */
 .song {
-    height: 350px !important;
+    height: 323px !important;
     margin-bottom: 15px;
     padding: 3px;
     /*background-color: rgb(238, 238, 238);*/
@@ -119,6 +119,8 @@ body {
     /*padding-bottom: 15px;*/
     /*border-top: 1px solid #cccccc;*/
     color: #EEEEEE;
+    overflow: hidden;
+    z-index: 9999;
 }
 
 #player p {
